partman-auto (69) UNRELEASED; urgency=low

  [ David Härdeman ]
  * Change wipe_disk in auto-shared.sh to take an explicit argument
    rather than relying on an implicit one

  [ Colin Watson ]
  * Fix a couple of minor glitches if no disks are present.
  * Don't offer some_device automatic partitioning if no disks are present.
  * Merge from Ubuntu:
    - auto.d/initial_auto: If an autopartitioning choice fails, remove
      /var/lib/partman/initial_auto so that we can try again.
    - auto.d/initial_auto: If partman-auto/method is preseeded and
      partman-auto/disk is not but there is only one disk, act as though
      partman-auto/disk had been preseeded to that disk. This simplifies a
      number of preseeding scenarios complicated by the removal of devfs
      path support.

 -- David Härdeman <david@hardeman.nu>  Sun, 18 Mar 2007 14:06:53 +0100

partman-auto (68) unstable; urgency=low

  * Increase maximum size for the root partition in "atomic" recipes.
    Closes: #412624.

 -- Frans Pop <fjp@debian.org>  Thu,  8 Mar 2007 12:36:14 +0100

partman-auto (67) unstable; urgency=low

  [ Updated translations ]
  * Hebrew (he.po) by Lior Kaplan
  * Malayalam (ml.po) by Praveen A
  * Swedish (sv.po) by Daniel Nylander

 -- Frans Pop <fjp@debian.org>  Tue, 27 Feb 2007 18:15:47 +0100

partman-auto (66) unstable; urgency=low

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Esperanto (eo.po) by Serge Leblanc
  * Hebrew (he.po) by Lior Kaplan
  * Korean (ko.po) by Sunjae park
  * Romanian (ro.po) by Eddy Petrișor

 -- Frans Pop <fjp@debian.org>  Wed, 31 Jan 2007 12:19:14 +0100

partman-auto (65) unstable; urgency=low

  * Fix errors due to missing environment variable DEVICES.

  [ Updated translations ]
  * Latvian (lv.po) by Aigars Mahinovs
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)

 -- Frans Pop <fjp@debian.org>  Sat, 20 Jan 2007 16:16:04 +0100

partman-auto (64) unstable; urgency=low
