@@ -34,12 +34,30 @@ Template: partman-auto/purge_lvm_from_device
 Type: boolean
 Default: false
 _Description: Remove existing logical volume data?
- The selected device already contains logical volumes and/or
- volume groups from a previous LVM installation, which must be removed
- from the disk before creating any partitions.
+ The selected device already contains the following LVM logical volumes,
+ volume groups and physical volumes which are about to be removed:
+ .
+ Logical volume(s) to be removed: ${LVTARGETS}
+ .
+ Volume group(s) to be removed: ${VGTARGETS}
+ .
+ Physical volume(s) to be removed: ${PVTARGETS}
+ .
+ Note that this will permanently erase any data currently on the
+ logical volumes.
+
+Template: partman-auto/purge_crypto_from_device
+Type: boolean
+Default: false
+_Description: Remove existing crypto volume data?
+ The selected device already contains a crypto volume which is about
+ to be removed.
+ .
+ The following crypto volume will be removed:
+ ${TARGET}
  .
  Note that this will also permanently erase any data currently on the
- logical volumes.
+ crypto volume.
 
 Template: partman-auto/cannot_purge_lvm_from_device
 Type: error
