@@ -3,6 +3,8 @@ partman-auto (69) UNRELEASED; urgency=low
   [ David Härdeman ]
   * Change wipe_disk in auto-shared.sh to take an explicit argument
     rather than relying on an implicit one
+  * Allow LVM and device-mapper (i.e. crypto) volumes to be deallocated.
+    This partially fixes #381892 and #396023
 
   [ Colin Watson ]
   * Fix a couple of minor glitches if no disks are present.
